{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 40,
  "lineage": "b95f03b8-e1cd-9ee2-384d-7855d93d6f55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "hardening_pipeline_vpc_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072616322033:security-group/sg-0763b446b7eed91f1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0763b446b7eed91f1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "072616322033",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0e393ba6abab9ec05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0255a09c5438d0551",
            "association_id": "eipassoc-01eb7d05f6a439132",
            "domain": "vpc",
            "id": "eipalloc-0255a09c5438d0551",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0ca1a3e1af4bb247f",
            "private_dns": "ip-192-168-0-176.ec2.internal",
            "private_ip": "192.168.0.176",
            "public_dns": "ec2-52-54-49-97.compute-1.amazonaws.com",
            "public_ip": "52.54.49.97",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.hardening_pipeline_igw",
            "aws_route_table.hardening_pipeline_public_rt",
            "aws_route_table_association.hardening_pipeline_rt_assoc",
            "aws_subnet.hardening_pipeline_private",
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hardening_pipeline_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072616322033:internet-gateway/igw-07daf730c98ca0bc5",
            "id": "igw-07daf730c98ca0bc5",
            "owner_id": "072616322033",
            "tags": {
              "Name": "ec2vpc-igw"
            },
            "tags_all": {
              "Name": "ec2vpc-igw"
            },
            "vpc_id": "vpc-0e393ba6abab9ec05"
          },
          "dependencies": [
            "aws_subnet.hardening_pipeline_private",
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hardening_pipeline_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0255a09c5438d0551",
            "connectivity_type": "public",
            "id": "nat-0e3b8b64ad5af0659",
            "network_interface_id": "eni-0ca1a3e1af4bb247f",
            "private_ip": "192.168.0.176",
            "public_ip": "52.54.49.97",
            "subnet_id": "subnet-0e45322694a12df51",
            "tags": {
              "Name": "ec2vpc-nat-gateway"
            },
            "tags_all": {
              "Name": "ec2vpc-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.hardening_pipeline_igw",
            "aws_route_table.hardening_pipeline_public_rt",
            "aws_route_table_association.hardening_pipeline_rt_assoc",
            "aws_subnet.hardening_pipeline_private",
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hardening_pipeline_nat_gateway_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072616322033:route-table/rtb-0109b77fbc9c83519",
            "id": "rtb-0109b77fbc9c83519",
            "owner_id": "072616322033",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e3b8b64ad5af0659",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ec2vpc-nat-gateway-rt"
            },
            "tags_all": {
              "Name": "ec2vpc-nat-gateway-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e393ba6abab9ec05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.hardening_pipeline_igw",
            "aws_nat_gateway.hardening_pipeline_nat_gateway",
            "aws_route_table.hardening_pipeline_public_rt",
            "aws_route_table_association.hardening_pipeline_rt_assoc",
            "aws_subnet.hardening_pipeline_private",
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hardening_pipeline_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072616322033:route-table/rtb-09c42c1630bf8c1f0",
            "id": "rtb-09c42c1630bf8c1f0",
            "owner_id": "072616322033",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07daf730c98ca0bc5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ec2vpc-public-rt"
            },
            "tags_all": {
              "Name": "ec2vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e393ba6abab9ec05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hardening_pipeline_igw",
            "aws_subnet.hardening_pipeline_private",
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hardening_pipeline_nat_gw_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059ace0d1eeb77b65",
            "route_table_id": "rtb-0109b77fbc9c83519",
            "subnet_id": "subnet-031d3801c54abd9d3"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.hardening_pipeline_igw",
            "aws_nat_gateway.hardening_pipeline_nat_gateway",
            "aws_route_table.hardening_pipeline_nat_gateway_rt",
            "aws_route_table.hardening_pipeline_public_rt",
            "aws_route_table_association.hardening_pipeline_rt_assoc",
            "aws_subnet.hardening_pipeline_private",
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hardening_pipeline_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e61c7fdb946ee5be",
            "route_table_id": "rtb-09c42c1630bf8c1f0",
            "subnet_id": "subnet-0e45322694a12df51"
          },
          "dependencies": [
            "aws_internet_gateway.hardening_pipeline_igw",
            "aws_route_table.hardening_pipeline_public_rt",
            "aws_subnet.hardening_pipeline_private",
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "image_builder_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072616322033:security-group/sg-05d67a5d8907ca8a8",
            "description": "Security group for EC2 Image Builder",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all eggress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d67a5d8907ca8a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ephemeral",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "linux-baseline-sg",
            "name_prefix": "",
            "owner_id": "072616322033",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e393ba6abab9ec05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hardening_pipeline"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hardening_pipeline_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072616322033:subnet/subnet-031d3801c54abd9d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031d3801c54abd9d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072616322033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ec2vpc-private"
            },
            "tags_all": {
              "Name": "ec2vpc-private"
            },
            "vpc_id": "vpc-0e393ba6abab9ec05"
          },
          "dependencies": [
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hardening_pipeline_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072616322033:subnet/subnet-0e45322694a12df51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e45322694a12df51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072616322033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ec2vpc-public"
            },
            "tags_all": {
              "Name": "ec2vpc-public"
            },
            "vpc_id": "vpc-0e393ba6abab9ec05"
          },
          "dependencies": [
            "aws_vpc.hardening_pipeline"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hardening_pipeline",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072616322033:vpc/vpc-0e393ba6abab9ec05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-096f19d3c4e3699a7",
            "default_route_table_id": "rtb-017d01d08a45af0ac",
            "default_security_group_id": "sg-0763b446b7eed91f1",
            "dhcp_options_id": "dopt-0f782436772b0e299",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e393ba6abab9ec05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017d01d08a45af0ac",
            "owner_id": "072616322033",
            "tags": {
              "Name": "ec2vpc"
            },
            "tags_all": {
              "Name": "ec2vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}